refactor: renamed ROLE_MEMBER to ROLE_USER